# genreq

./: LICENSE  README.md
genreq/: AUTHORS.rst  Makefile  README.md  pyproject.toml
genreq/.github/: ISSUE_TEMPLATE.md
genreq/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat
genreq/src/genreq/: __init__.py  cli.py  genreq.py
genreq/src/genreq/.test_venv/: pyvenv.cfg
genreqs/: .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  README.md  README.rst  pyproject.toml  tox.ini
genreqs/docs/: usage.rst
genreqs/src/genreqs/: cli.py  genreqs.py
genreqs/tests/: __init__.py  test_genreqs.py
test/: test.py
