[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genreq"
version = "1.1.0"
description = "A Python tool that automatically detects python packages used in a project and generate a requirements.txt file"
readme = "README.md"
authors = [
  {name = "Ziad Elshahawy", email = "zelshahawy@uchicago.edu"}
]
maintainers = [
  {name = "Ziad Elshahawy", email = "zelshahawy@uchicago.edu"}
]
classifiers = [

]
license = {text = "BSD license"}
dependencies = []

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/zelshahawy/genreq/issues"
changelog = "https://github.com/zelshahawy/genreq/blob/master/changelog.md"
homepage = "https://github.com/zelshahawy/genreq"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[project.scripts]
genreq = "genreq.genreq:main"
